--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "preversion": "git checkout master && git pull && npm i",
-    "postversion": "git push --all && npm publish"
+    "postversion": "git push --all && git push --tags && npm publish"
   },
   "repository": {
     "type": "git",
