--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
   },
+  "bin": {
+    "support-require": "./lib/require.js"
+  },
   "scripts": {
+    "preversion": "node lib/require.js ./preversion",
+    "postversion": "node lib/require.js ./postversion",
     "test": "eslint ."
   },
   "repository": {
@@ -29,6 +34,7 @@
     "npm": "^6.1.0"
   },
   "dependencies": {
+    "colors": "^1.3.0",
     "eslint": "^5.1.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
