--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@player1os/javascript-support",
   "version": "1.2.5",
-  "description": "A base configuration for javascript projects",
+  "description": "A set of common utilities and scripts to be used in the development of projects written in Javascript",
   "private": false,
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
