--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
 		"comma-dangle": ["error", "always-multiline"],
 		"indent": ["error", "tab"],
 		"max-len": ["error", { "code": 140 }],
+		"no-tabs": ["off"],
 		"object-curly-spacing": ["error", "always"],
-		"no-tabs": ["off"]
+		"operator-linebreak": ["error", "before"]
 	}
 }
