One line script

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,4 @@ cache:
 
 install: npm ci || npm i
 
-after_script:
-- git diff --quiet || (\
-    git add . && git commit -m "Updated the lockfile" &&\
-    git push --force-with-lease=${TRAVIS_BRANCH}:origin/${TRAVIS_BRANCH} origin HEAD:${TRAVIS_BRANCH}\
-  )
+after_script: git diff --quiet || (git add . && git commit -m "Updated the lockfile" && git push --force-with-lease=${TRAVIS_BRANCH}:origin/${TRAVIS_BRANCH} origin HEAD:${TRAVIS_BRANCH})
