Update the author's email address

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "process",
     "async"
   ],
-  "author": "Osama Hassanein <player1os@gmail.com>",
+  "author": "Osama Hassanein <osama.e.hassanein@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Player1os/javascript-support/issues"
